@@ -1,5 +1,12 @@
 2006-02-20  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/schroot.cc (main): Use the new session::ptr typedef.
+
+	* schroot/sbuild-session.h: Add a ptr typedef, a shared_ptr to a
+	session.
+
+2006-02-20  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/sbuild-chroot-config.cc
 	(print_chroot_list_simple): New function to print the chroot list
 	on a single line, in the same style as dchroot (comma-separated,
